--- a/app/public/css/style.css
+++ b/app/public/css/style.css
@@ -3,10 +3,15 @@
     background: black;
 }
 
-/* strong {
-    color: green;
-} */
+h1{
+    font-weight: 700;
+}
 
-h1, h4 {
-    font-weight: 900;
+h4{
+    font-weight: 500;
+}
+
+.container{
+    color: goldenrod;
+    background: black;
 }
